// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows error messages when called with invalid argument 1`] = `
"FAIL __tests__/todo_non_string.test.js
  ● Test suite failed to run

    Todo must be called with only a description.

      6 |  */
      7 | 
    > 8 | it.todo(() => {});
        |    ^
      9 | 

      at __tests__/todo_non_string.test.js:8:4

"
`;

exports[`shows error messages when called with multiple arguments 1`] = `
"FAIL __tests__/todo_multiple_args.test.js
  ● Test suite failed to run

    Todo must be called with only a description.

      6 |  */
      7 | 
    > 8 | it.todo('todo later', () => {});
        |    ^
      9 | 

      at __tests__/todo_multiple_args.test.js:8:4

"
`;

exports[`shows error messages when called with no arguments 1`] = `
"FAIL __tests__/todo_no_args.test.js
  ● Test suite failed to run

    Todo must be called with only a description.

      6 |  */
      7 | 
    > 8 | it.todo();
        |    ^
      9 | 

      at __tests__/todo_no_args.test.js:8:4

"
`;

exports[`works with all statuses 1`] = `
"FAIL __tests__/statuses.test.js
  ✓ passes
  ✕ fails
  ○ skipped 1 test
  ✎ todo 1 test

  ● fails

    expect(received).toBe(expected) // Object.is equality

    Expected: 101
    Received: 10

      11 | 
      12 | it('fails', () => {
    > 13 |   expect(10).toBe(101);
         |              ^
      14 | });
      15 | 
      16 | it.skip('skips', () => {

      at __tests__/statuses.test.js:13:14

"
`;
